# Scaler-Hackthon

./: .env.example  .gitignore  Dockerfile  README.md  grader.py  inference.py  openenv.yaml  tasks.json  tasks.py
misinfoguard_env/: Dockerfile  README.md  __init__.py  app.py  config.py  demo.py  environment.py  grader.py  inference.py  models.py  network.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  train.py  validate_submission.py
misinfoguard_env/.github/workflows/: ci.yml
misinfoguard_env/agents/: __init__.py  defender.py  spreader.py
misinfoguard_env/graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
misinfoguard_env/logs/: evaluations.npz
misinfoguard_env/logs/PPO_1/: events.out.tfevents.1775210872.Omkar-Gurav.20992.0
misinfoguard_env/server/: app.py
misinfoguard_env/tests/: __init__.py  test_env.py
server/: __init__.py  app.py
